--- a/package.json
+++ b/package.json
@@ -12,5 +12,16 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.13"
   }
 }
