feat: install tailwind-merge and clsx

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/svelte": "^7.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
+    "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.6.0",
     "svelte": "^5.35.4",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
