--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/svelte": "^7.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
+    "astro-cloudinary": "^1.3.4",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.6.0",
     "svelte": "^5.35.4",
@@ -31,6 +32,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.13"
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "svelte-cloudinary": "^2.3.0"
   }
 }
