--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "rollup-plugin-visualizer": "^6.0.3",
     "svelte-cloudinary": "^2.3.0"
   }
 }
