--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
-    "@astrojs/svelte": "^7.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
     "astro-cloudinary": "^1.3.4",
     "clsx": "^2.1.1",
-    "embla-carousel-svelte": "^8.6.0",
-    "svelte": "^5.35.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
@@ -33,7 +30,6 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
-    "rollup-plugin-visualizer": "^6.0.3",
-    "svelte-cloudinary": "^2.3.0"
+    "rollup-plugin-visualizer": "^6.0.3"
   }
 }
