--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
+    "@astrojs/sitemap": "^3.4.2",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
     "astro-cloudinary": "^1.3.4",
