--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "rollup-plugin-visualizer": "^6.0.3",
     "@antfu/eslint-config": "^5.3.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "astro-eslint-parser": "^1.2.2",
     "eslint": "^9.35.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-better-tailwindcss": "^3.7.9",
     "eslint-plugin-format": "^1.0.1",
     "prettier-plugin-astro": "^0.14.1",
-    "eslint-plugin-astro": "^1.3.1",
-    "astro-eslint-parser": "^1.2.2"
+    "rollup-plugin-visualizer": "^6.0.3"
   }
 }
