--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.0",
-    "@astrojs/sitemap": "^3.4.2",
+    "@astrojs/mdx": "^4.3.9",
+    "@astrojs/sitemap": "3.6.0",
     "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.11.0",
+    "astro": "^5.15.3",
     "astro-cloudinary": "^1.3.4",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.3.1",
